# aa-qt

./: CMakeLists.txt  main.cpp  qml.qrc
qml/: main.qml
src/: androidauto.cpp  androidauto.h  usbdetector.cpp  usbdetector.h
